se restaura apellido en footer

--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
     </form>
 </section>
 </div>
-    <footer> <p> Todos los derechos reservados &copy; Manuel Lufan 2022</p> </footer>
+    <footer> <p> Todos los derechos reservados &copy; Manuel LufFan 2022</p> </footer>
 </body>
 </html>
