se hizo responsive

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
  <label >Mensaje</label>
  <textarea cols="30" rows="10"></textarea>
 </div>
+<div class="btn-area">
 <input type="submit"  value= "Enviar" class="btn send-btn">
+</div>
  </fieldset>
 
 
@@ -129,6 +131,6 @@
     </form>
 </section>
 </div>
-    <footer> <p> Todos los derechos reservados &copy; Manuel LufFan 2022</p> </footer>
+    <footer> <p> Todos los derechos reservados &copy; Manuel Lufan 2022</p> </footer>
 </body>
 </html>
